app/styles/shared.css
@font-face {
  font-family: "Recoleta-Regular";
  src: url(../fonts/recoleta-regular.woff) format("truetype");
}

@font-face {
  font-family: "Recoleta-SemiBold";
  src: url(../fonts/recoleta-semibold.woff) format("truetype");
}

@font-face {
  font-family: "Recoleta-Thin";
  src: url(../fonts/recoleta-thin.woff) format("truetype");
}

@font-face {
  font-family: "Recoleta-Medium";
  src: url(../fonts/recoleta-medium.woff) format("truetype");
}

@font-face {
  font-family: "Recoleta-Light";
  src: url(../fonts/recoleta-light.woff) format("truetype");
}

@font-face {
  font-family: "Recoleta-Bold";
  src: url(../fonts/recoleta-bold.woff) format("truetype");
}

@font-face {
  font-family: "Recoleta-Black";
  src: url(../fonts/recoleta-black.woff) format("truetype");
}

@font-face {
  font-family: "Graphic-Regular";
  src: url(../fonts/Graphik-Regular.otf) format("truetype");
}

h1 {
  font-size: 5.05rem;
  font-family: "Recoleta-Regular";
  line-height: 1.2;
}

h2 {
  font-size: 3.4rem;
  font-family: "Recoleta-Regular";
  line-height: 1.2;
}

h3 {
  font-size: 2.25rem;
  font-family: "Recoleta-Regular";
  line-height: 1.2;
  text-align: left;
}

h4 {
  font-size: 1.5rem;
  font-family: "Recoleta-Regular";
  line-height: 1.3;
  text-align: left;
}

p,
li {
  font-size: 1rem;
  font-family: "Graphic-Regular";
  line-height: 1.6;
  text-align: left;
}

a {
  font-size: 1rem;
  font-family: "Graphic-Regular";
  line-height: 1.6;
  color: #736ebe;
  text-decoration: underline;
  transition: border-bottom 200ms ease-out;
}

a:hover {
  color: #b7b4de;
}

* {
  font-family: "Recoleta-Regular";
}

.background {
  position: relative;
  background: url("/assets/background.svg");
  background-repeat: no-repeat;
}

.footer {
  margin-top: 4rem;
  background: url("/assets/footer.svg") no-repeat center top;
}

